# project-manager-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  app.log.2025-03-02  dist-workspace.toml  plan..md  scratchpad.md
examples/: google_search_grounding.rs
prompt_templates/: _dependencies.jinja  github_issues_plan.jinja  step_01_initial_ideation.jinja  step_02_domain_analysis.jinja  step_03_prd_v1.jinja  step_04_prd_v2.jinja  step_05_arch_L1.jinja  step_06_arch_L2.jinja  step_07_explain_architecture.jinja  step_08_tdd_v1.jinja  step_09_github_issues_plan.jinja  step_multi_dependency_example.jinja
roadmap/: BR-001.md  BR-002.md  BR-003.md  BR-004.md  BR-005.md
src/: gemini_client.rs  lib.rs  llm_provider.rs  main.rs  pipeline.rs  template_loader.rs  types.rs  workflow.rs
tests/: init_command_test.rs  multi_dependency_test.rs  workflow_test.rs
